--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -2,112 +2,128 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-        h1 
-        {
-            text-align: center;
-            font-size: 60px;
-            color: teal;
-        }
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <style>
+    h1 {
+      text-align: center;
+      font-size: 60px;
+      color: teal;
+    }
 
-        #calculator 
-        {
-            height: 500px;
-            width: 400px;
-            box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-            margin: auto;
-            padding: 40px;
-            border-radius: 30px;
-        }
+    #calculator {
+      height: 500px;
+      width: 400px;
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+      margin: auto;
+      padding: 40px;
+      border-radius: 30px;
+    }
 
-        #display 
-        {
-            height: 60px;
-            width: 100%;
-            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-            margin: auto;
-            border-radius: 10px;
-        }
+    #display {
+      height: 60px;
+      width: 100%;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      margin: auto;
+      border-radius: 10px;
+      font-size: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding: 10px;
+      box-sizing: border-box;
+    }
 
-        #keyboard 
-        {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(4, 80px);
-            gap: 10px;
-            margin-top: 20px;
-        }
+    #keyboard {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 80px);
+      gap: 10px;
+      margin-top: 20px;
+    }
 
-        #keyboard>div 
-        {
-            box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-                rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-            border-radius: 10px;
-            font-size: 25px;
-            font-weight: bold;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    #keyboard>div {
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
+        rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+      border-radius: 10px;
+      font-size: 25px;
+      font-weight: bold;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
 
-        #keyboard>div:hover 
-        {
-            background-color: teal;
-        }
+    #keyboard>div:hover {
+      background-color: teal;
+      color: white;
+    }
 
-        .black 
-        {
-            background-color: black;
-            color: white;
-        }
+    .black {
+      background-color: black;
+      color: white;
+    }
 
-        .red 
-        {
-            background-color: red;
-            color: white;
-        }
-
-        #display 
-        {
-            font-size: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
+    .red {
+      background-color: red;
+      color: white;
+    }
+  </style>
 </head>
 
 <body>
-    <h1>Calculator📱</h1>
-    <div id="calculator">
-        <div id="display"></div>
-        <div id="keyboard">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-            <div class="black">+</div>
-            <div>4</div>
-            <div>5</div>
-            <div>6</div>
-            <div class="black">-</div>
-            <div>7</div>
-            <div>8</div>
-            <div>9</div>
-            <div class="black">*</div>
-            <div class="red">C</div>
-            <div>0</div>
-            <div class="black">=</div>
-            <div class="black">/</div>
-        </div>
+  <h1>Calculator📱</h1>
+  <div id="calculator">
+    <div id="display"></div>
+    <div id="keyboard">
+      <div>1</div>
+      <div>2</div>
+      <div>3</div>
+      <div class="black">+</div>
+      <div>4</div>
+      <div>5</div>
+      <div>6</div>
+      <div class="black">-</div>
+      <div>7</div>
+      <div>8</div>
+      <div>9</div>
+      <div class="black">*</div>
+      <div class="red">C</div>
+      <div>0</div>
+      <div class="black">=</div>
+      <div class="black">/</div>
     </div>
+  </div>
 </body>
-
 </html>
 
 <script>
-    //write code js here
-</script>
+    let display = document.getElementById('display');
+    let buttons = document.querySelectorAll('#keyboard div');
+
+    let string = "";
+
+    buttons.forEach(button => {
+      button.addEventListener('click', (e) => {
+        let value = e.target.innerText;
+
+        if (value == '=') {
+          try {
+            string = eval(string).toString();
+          } catch {
+            string = "Error";
+          }
+          display.innerText = string;
+        } else if (value == 'C') {
+          string = "";
+          display.innerText = "";
+        } else {
+          string += value;
+          display.innerText = string;
+        }
+      });
+    });
+  </script>
+
