TODO-list Done.

--- a/TODO-list.html/index.html
+++ b/TODO-list.html/index.html
@@ -1,1 +1,34 @@
-<p>Hello</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1>TODO App</h1>
+    <div>
+        <form id="form">
+            <label for="">Task Name</label><br />
+            <input id="task" type="text" placeholder="Enter Task Name" />
+            <label for="">Priority </label><br />
+            <select id="priority">
+                <option value="">Select Priority</option>
+                <option value="High">High</option>
+                <option value="Low">Low</option>
+            </select><br />
+            <input type="submit" />
+        </form>
+        <table>
+            <thead>
+                <tr>
+                <th>Task</th>
+                <th>Priority</th>
+                <th style="background-color: red;">Delete</th>
+                </tr>
+            </thead>
+        </table>
+    </div>
+</body>
+</html>
