--- a/TODO-list.html/index.html
+++ b/TODO-list.html/index.html
@@ -28,7 +28,11 @@
                 <th style="background-color: red;">Delete</th>
                 </tr>
             </thead>
+            <tbody>
+
+            </tbody>
         </table>
     </div>
 </body>
 </html>
+<script src="index.js"></script>
